# fitting-room

./: README.md
assets/garments/: garments.json
assets/garments/models/: tshirt_basic.json
backend/: pyproject.toml
backend/api/: routes.py
backend/app/: main.py
backend/core/: config.py  tasks.py
backend/pipeline/: garment.py  geometry.py  physics.py  pose.py  pretrained.py  render.py  tryon_service.py  utils.py
backend/tests/: test_pipeline.py
backend/utils/: io.py  logging.py
frontend/: app.js  index.html  style.css
