[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-tryon-backend"
version = "0.1.0"
description = "Simplified virtual try-on backend with canonical pose and glTF export"
authors = [{name = "Virtual Try-On Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
addopts = "-ra"
